[project]
name = "marmelad"
version = "0.0.1"
description = "An intelligent LangGraph-powered agent designed to assist with research, coding, and problem-solving across various domains."
authors = [
    { name = "Shamsuddin Ahmed", email = "info@shamspias.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.34",
    "langchain-openai>=0.2.2",
    #    "langchain-anthropic>=0.2.3",
    "langchain>=0.3.3",
    "langchain-xai",
    #    "langchain-fireworks>=0.2.1",
    "python-dotenv>=1.0.1",
    #    "langchain-elasticsearch>=0.3.0",
    "langchain-pinecone>=0.2.0",
    "msgspec>=0.18.6",
    #    "langchain-mongodb>=0.2.0",
    #    "langchain-cohere>=0.3.0",
    "langchain-postgres>=0.0.12",
    "httpx[socks]>=0.27.2,<0.28.0",
    #    "langchain-google-genai>=2.0.1",
    #    "langchain-mistralai>=0.2.0",
    "langchain-ollama>=0.2.0",
    #    "gigachat>=0.1.35",
    #    "langchain-community>=0.3.2",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["retrieval_graph", "index_graph", "shared"]
[tool.setuptools.package-dir]
"langgraph.templates.retrieval_graph" = "src/retrieval_graph"
"langgraph.templates.index_graph" = "src/index_graph"
"retrieval_graph" = "src/retrieval_graph"
"index_graph" = "src/index_graph"
"shared" = "src/shared"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "D", # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
[tool.pytest.ini_options]
pythonpath = [
    "src"
]